# lintfree

./: .cspell.json  .cspell.txt  .editorconfig  .gitignore  .markdownlint.yaml  .mergify.yml  .prettierignore  .prettierrc.yaml  .prospector.yaml  .python-version  .restyled.yaml  CHANGELOG.md  LICENSE  Makefile  NOTICE  README.md  pyproject.toml  tox.ini
.cspell.d/: python.txt  terms.txt
.devcontainer/: Brewfile  Dockerfile  Makefile  common.mk  dependabot.yml  devcontainer.json  init.sh  package.json  setup.sh  test.sh
.githooks/: pre-commit  pre-commit.sh
.github/: dependabot.yml  mergify.yaml  mergify.yml
.github/workflows/: build.yaml  push.yaml
.obelist/: black.yaml  cspell.yaml  ec.yaml  jscpd.yaml  lintspaces.yaml  lychee.yaml  markdown-link-check.yaml  markdownlint.yaml  misspell.yaml  prettier.yaml  proselint.yaml  prospector.yaml  reorder-python-imports.yaml  shellcheck.yaml  shfmt.yaml  woke.yaml  wtf.yaml  yamllint.yaml
.octonote/: ec.yaml  editorconfig.yaml  shellcheck.yaml
.softener/: ec.yaml  flake8.yaml  lychee.yaml
src/obelist/: __init__.py  errors.py
src/obelist/cli/: __init__.py
src/obelist/cli/cmds/: __init__.py  debug.py  format.py  list.py  parse.py  path.py
src/obelist/core/: app.py  config.py  format.py  parse.py  query.py
src/obelist/core/handlers/: __init__.py  jq.py  regex.py  xpath.py
src/obelist/data/schemas/: config.json
src/octonote/: __init__.py  errors.py
src/octonote/cli/: __init__.py
src/octonote/cli/cmds/: __init__.py  debug.py  list.py  parse.py  path.py
src/octonote/core/: app.py  config.py  format.py  parse.py  query.py
src/octonote/core/handlers/: __init__.py  jq.py  regex.py  xpath.py
src/softener/: __init__.py  errors.py
src/softener/cli/: __init__.py
src/softener/cli/cmds/: __init__.py  debug.py  format.py  list.py  parse.py  path.py
src/softener/core/: app.py  config.py  format.py  parse.py
src/softener/core/handlers/: jq.py  xpath.py
src/softener/data/schemas/: config.json
test/lib/setup/: linter.sh  wrapper.sh
test/lib/tools/: find-all-files.sh  find-shell-scripts.sh  process-diff.sh  process-links.py
test/lint/: codecov.sh  cspell.sh  ec.sh  eclint.sh  flake8.sh  lintspaces.sh  lychee.sh  markdown-link-check.sh  markdownlint.sh  prettier.sh  prospector.sh  pytest.sh  shellcheck.sh  shfmt.sh  wtf.sh
test/linters/: black.sh  codecov.sh  cspell.sh  ec.sh  flake8.sh  jscpd.sh  lintspaces.sh  lychee.sh  markdown-link-check.sh  markdownlint.sh  misspell.sh  prettier.sh  proselint.sh  prospector.sh  pytest.sh  reorder-python-imports.sh  shellcheck.sh  shfmt.sh  woke.sh  wtf.sh  yamllint.sh
test/wrappers/: black.sh  lintspaces.sh  lychee.sh  markdown-link-check.sh  prettier.sh  reorder-python-imports.sh  shfmt.sh  verify-dict-sort.sh  wtf.sh
tests/matchers/: shellcheck-gcc.json
tests/output/: shellcheck-gcc.txt
